2014-05-02  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_free_region),
	(gst_ttmlrender_gen_buffer), (gst_ttmlrender_init):
	Fix leak, crash and warning.

2014-05-02  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_region_compare_zindex),
	(gst_ttmlrender_region_compare_id), (gst_ttmlrender_store_layout),
	(gst_ttmlrender_build_layouts), (gst_ttmlrender_show_region),
	(gst_ttmlrender_free_region), (gst_ttmlrender_gen_buffer),
	(gst_ttmlrender_dispose), (gst_ttmlrender_class_init),
	(gst_ttmlrender_init):
	* src/gstttmlrender.h:
	* win32/vs10/libgstfluttml_sdk.vcxproj:
	WORK IN PROGRESS: Build list of PangoLayouts corresponding to each region.
	Start using Cairo to produce (empty) buffers.

2014-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_dispose):
	Minor fix in debug output.

2014-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_base_init),
	(gst_ttmlbase_class_init), (gst_ttmlbase_get_type):
	Register sink pad template in base_init instead of class_init so it
	appears in the templates list of gst-inspect. A minor nuance, but
	who knows if it could have caused problems in the future...

2014-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_downstream_negotiation),
	(gst_ttmlbase_init):
	* src/gstttmlbase.h:
	* src/gstttmlrender.c: (gst_ttmlrender_setcaps),
	(gst_ttmlrender_class_init), (gst_ttmlrender_init):
	Better setcaps detection that allows working with gst 0.10 and 1.0

2014-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_fixate_caps):
	Remove unnecessary caps truncation (our template has only one struct)
	This removes an ultra-pedantic gcc warning about unused result...

2014-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_downstream_negotiation),
	(gst_ttmlbase_handle_buffer), (gst_ttmlbase_handle_event):
	* src/gstttmlbase.h: